--- a/src/main/resources/GameScene.fxml
+++ b/src/main/resources/GameScene.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Scene?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
@@ -46,18 +47,18 @@
                </GridPane>
             </children>
          </AnchorPane>
-         <VBox fx:id="vboxWhite" layoutX="750.0" layoutY="375.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="375.0" prefWidth="250.0">
+         <VBox fx:id="whiteVBox" layoutX="750.0" layoutY="425.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="325.0" prefWidth="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="425.0">
             <children>
-               <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="250.0">
+               <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="250.0">
                   <children>
-                     <AnchorPane prefHeight="225.0" prefWidth="270.0">
+                     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="250.0">
                         <children>
-                           <ImageView fitHeight="226.0" fitWidth="250.0" layoutY="1.0">
+                           <ImageView fitHeight="175.0" fitWidth="250.0">
                               <image>
                                  <Image url="@images/gameSceneBackground.jpg" />
                               </image>
                            </ImageView>
-                           <Label fx:id="whitePlayerLabel" layoutX="85.0" layoutY="68.0" prefHeight="27.0" prefWidth="102.0" text="Label">
+                           <Label fx:id="whitePlayerNameLabel" layoutX="93.0" layoutY="61.0" prefHeight="25.0" prefWidth="130.0" text="Label">
                               <font>
                                  <Font name="Arial Black" size="18.0" />
                               </font>
@@ -78,7 +79,7 @@
                                  </LinearGradient>
                               </textFill>
                            </Label>
-                           <Label fx:id="timerWhiteLabel" layoutX="93.0" layoutY="135.0" text="Label">
+                           <Label fx:id="whitePlayerTimerLabel" layoutX="93.0" layoutY="88.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" text="Label">
                               <font>
                                  <Font name="Arial Black" size="14.0" />
                               </font>
@@ -101,11 +102,9 @@
                            </Label>
                         </children>
                      </AnchorPane>
-                     <Label text="Label" visible="false" />
-                     <Label />
                   </children>
                </HBox>
-               <GridPane fx:id="whitePiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
+               <GridPane fx:id="whitePiecesOutGridPane" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -122,20 +121,18 @@
                </GridPane>
             </children>
          </VBox>
-         <VBox fx:id="vboxBlack" layoutX="750.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="376.0" prefWidth="250.0">
+         <VBox fx:id="blackVBox" layoutX="750.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="325.0" prefWidth="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-               <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="225.0" prefWidth="250.0">
+               <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="250.0">
                   <children>
-                     <Label text="Label" visible="false" />
-                     <Label />
-                     <AnchorPane prefHeight="225.0" prefWidth="329.0">
+                     <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="175.0" prefWidth="250.0">
                         <children>
-                           <ImageView fitHeight="225.0" fitWidth="255.0" layoutX="-13.0">
+                           <ImageView fitHeight="175.0" fitWidth="250.0">
                               <image>
                                  <Image url="@images/gameSceneBackground.jpg" />
                               </image>
                            </ImageView>
-                           <Label fx:id="timerBlackLabel" layoutX="93.0" layoutY="119.0" text="Label">
+                           <Label fx:id="blackPlayerTimerLabel" layoutX="93.0" layoutY="88.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" text="Label">
                               <font>
                                  <Font name="Arial Black" size="14.0" />
                               </font>
@@ -156,7 +153,7 @@
                                  </LinearGradient>
                               </textFill>
                            </Label>
-                           <Label fx:id="blackPlayerLabel" layoutX="79.0" layoutY="54.0" prefHeight="27.0" prefWidth="114.0" text="Label">
+                           <Label fx:id="blackPlayerNameLabel" layoutX="93.0" layoutY="61.0" prefHeight="25.0" prefWidth="130.0" text="Label">
                               <font>
                                  <Font name="Arial Black" size="18.0" />
                               </font>
@@ -177,29 +174,11 @@
                                  </LinearGradient>
                               </textFill>
                            </Label>
-                           <Label fx:id="volumeSliderName" layoutX="46.0" layoutY="187.0" text="   Volume   ">
-                              <textFill>
-                                 <LinearGradient endX="1.0" endY="1.0" startX="1.0">
-                                    <stops>
-                                       <Stop>
-                                          <color>
-                                             <Color />
-                                          </color>
-                                       </Stop>
-                                       <Stop offset="1.0">
-                                          <color>
-                                             <Color red="1.0" green="1.0" blue="1.0" />
-                                          </color>
-                                       </Stop>
-                                    </stops>
-                                 </LinearGradient>
-                              </textFill></Label>
-                           <Slider fx:id="volumeSlider" layoutX="121.0" layoutY="188.0" max="1.0" min="0.0" prefHeight="14.0" prefWidth="75.0" value="1.0" />
                         </children>
                      </AnchorPane>
                   </children>
                </HBox>
-               <GridPane fx:id="blackPiecesOut" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="151.0" prefWidth="250.0">
+               <GridPane fx:id="blackPiecesOutGridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="250.0">
                  <columnConstraints>
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -215,6 +194,34 @@
                </GridPane>
             </children>
          </VBox>
+         <AnchorPane layoutX="750.0" layoutY="325.0" prefHeight="100.0" prefWidth="250.0">
+            <children>
+               <Slider fx:id="volumeSlider" layoutX="171.0" layoutY="7.0" max="1.0" min="0.0" prefHeight="14.0" prefWidth="75.0" value="1.0" />
+               <Label fx:id="volumeSliderName" layoutX="109.0" layoutY="4.0" text="   Volume   ">
+                  <textFill>
+                     <LinearGradient endX="1.0" endY="1.0" startX="1.0">
+                        <stops>
+                           <Stop>
+                              <color>
+                                 <Color />
+                              </color>
+                           </Stop>
+                           <Stop offset="1.0">
+                              <color>
+                                 <Color red="1.0" green="1.0" blue="1.0" />
+                              </color>
+                           </Stop>
+                        </stops>
+                     </LinearGradient>
+                  </textFill>
+               </Label>
+               <Label fx:id="currentMoveColorLabel" layoutX="126.0" layoutY="42.0" text="Label" />
+               <Button fx:id="blackDrawButton" layoutX="2.0" layoutY="2.0" mnemonicParsing="false" text="Draw" />
+               <Button fx:id="blackResignButton" layoutX="57.0" layoutY="2.0" mnemonicParsing="false" text="Resign" />
+               <Button fx:id="whiteDrawButton" layoutX="2.0" layoutY="73.0" mnemonicParsing="false" text="Draw" />
+               <Button fx:id="whiteResignButton" layoutX="57.0" layoutY="73.0" mnemonicParsing="false" text="Resign" />
+            </children>
+         </AnchorPane>
       </children>
       <opaqueInsets>
          <Insets />
