--- a/src/main/resources/TutorialScene.fxml
+++ b/src/main/resources/TutorialScene.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TutorialSceneController">
    <children>
       <ImageView fitHeight="1060.0" fitWidth="1051.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -281,7 +281,7 @@
                   </Text>
                   <VBox alignment="TOP_CENTER" prefHeight="115.0" prefWidth="1002.0">
                      <children>
-                        <Button fx:id="ButtonGotIt" mnemonicParsing="false" prefHeight="59.0" prefWidth="159.0" text="Got it!">
+                        <Button fx:id="ButtonGotIt" mnemonicParsing="false" onAction="#GotItClick" prefHeight="59.0" prefWidth="159.0" text="Got it!">
                            <font>
                               <Font size="20.0" />
                            </font>
