--- a/src/main/resources/TutorialScene.fxml
+++ b/src/main/resources/TutorialScene.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -11,8 +13,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TutorialSceneController" >
-    <AnchorPane prefHeight="750.0" prefWidth="1050.0" >
+<Scene xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TutorialSceneController">
+    <AnchorPane prefHeight="750.0" prefWidth="1050.0">
       <children>
          <ImageView fitHeight="753.0" fitWidth="1051.0" layoutX="-1.0" layoutY="-2.0">
             <image>
@@ -220,6 +222,12 @@
                </Tab>
            </tabs>
          </TabPane>
-         <Button fx:id="gotItButton" onAction="#GotItClick" layoutX="483.0" layoutY="675.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="84.0" text="Got it" />
+         <Button fx:id="gotItButton" layoutX="483.0" layoutY="675.0" mnemonicParsing="false" onAction="#GotItClick" prefHeight="43.0" prefWidth="84.0" text="Got it" />
+         <Slider fx:id="volumeSlider" layoutX="858.0" layoutY="46.0" max="1.0" value="1.0" />
+         <Label layoutX="798.0" layoutY="43.0" prefHeight="17.0" prefWidth="66.0" text="Volume" textFill="#a1a07b">
+            <font>
+               <Font name="System Bold" size="14.0" />
+            </font>
+         </Label>
       </children></AnchorPane>
 </Scene>
