--- a/src/main/resources/WinnerScene.fxml
+++ b/src/main/resources/WinnerScene.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -54,6 +55,12 @@
 				<Font name="Arial Black" size="22.0" />
 			 </font>
 		  </Label>
+         <Label layoutX="748.0" layoutY="686.0" text="Volume" textFill="#bcad69">
+            <font>
+               <Font name="System Bold" size="14.0" />
+            </font>
+         </Label>
+         <Slider fx:id="volumeSlider" layoutX="812.0" layoutY="689.0" max="1.0" value="1.0" />
 	   </children>
 	</AnchorPane>
 </Scene>
