--- a/src/main/resources/TutorialScene.fxml
+++ b/src/main/resources/TutorialScene.fxml
@@ -32,7 +32,7 @@
                <content>
                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                         <children>
-                           <Text fill="WHITE" layoutX="14.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="   This is Chess simulation programm. Click on the piece to move, and the location to move it to. If the action is legal, it will be taken. The game is done once a King enters checkmate, or once there is a draw." wrappingWidth="959.13671875">
+                           <Text fill="WHITE" layoutX="14.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="   This is Chess simulation program. Click on the piece to move, and the location to move it to. If the action is legal, it will be taken. The game is done once a King enters checkmate, or once there is a draw." wrappingWidth="959.13671875">
                               <font>
                                  <Font name="Arial Black" size="24.0" />
                               </font>
